добавил таблицы, добавил методы для показа-6

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "Models\\": "Models",
             "Helpers\\": "Helpers",
             "Db\\": "Db",
-            "": "sl_proto/"
+            "": "sl_proto"
         }
     },
     "authors": [
