--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,23 @@
 version: '3'
 services:
   php:
-    image: php:fpm-alpine
+    image: sl-back:latest 
+    #network_mode: "host"
     volumes:
       - './:/var/www/html'
 
   nginx:
-    image: nginx:latest
+    image: sl-front:latest
+    #network_mode: "host"
     ports:
-      - 80:80
-    volumes:
-      - './:/var/www/html'
-      - './docker/nginx/conf.d:/etc/nginx/conf.d'
+      - 8080:80
+        #    volumes:
+        # - './:/var/www/html'
+        # - './docker/nginx/conf.d:/etc/nginx/conf.d'
 
   postgres:
     image: postgres:12
+    #network_mode: "host"
     ports:
       - "5432:5432"
     volumes:
