--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
   php:
-    image: sl-back:latest 
+    image: ghcr.io/teleknew/sl-back:latest
     #network_mode: "host"
     volumes:
       - './:/var/www/html'
 
   nginx:
-    image: sl-front:latest
+    image: ghcr.io/teleknew/sl-front:latest
     #network_mode: "host"
     ports:
       - 8080:80
