устранили ошибку верхнего регистра для классов - 2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   php:
-    image: ghcr.io/teleknew/sl-front:latest
+    image: ghcr.io/teleknew/sl-back:latest
     #image: sl-back:latest
     volumes:
       - './:/var/www/html'
