устранили ошибку верхнего регистра для классов - 4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     #image: sl-back:latest
     volumes:
       - './:/var/www/html'
-    #build:
-    #  context: ./
+    build:
+      context: ./
 
   nginx:
     image: ghcr.io/teleknew/sl-front:latest
