--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   php:
     image: ghcr.io/teleknew/sl-back:latest
     #image: sl-back:latest
-    volumes:
-      - './:/var/www/html'
-    build:
-      context: ./
+    #volumes:
+    #  - './:/var/www/html'
+    #build:
+    #  context: ./
 
   nginx:
     image: ghcr.io/teleknew/sl-front:latest
