--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Build and push container image
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.TOKEN_TELEKNEW }}
+        tags: |
+          teleknew/sl-back:pr-${{ github.event.pull_request.number }}
+          
+          
+          
