--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,12 @@ jobs:
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.TOKEN_TELEKNEW }}
     - name: Build and push container image
       uses: docker/build-push-action@v3
       with:
@@ -29,7 +35,7 @@ jobs:
         secrets: |
             GIT_AUTH_TOKEN=${{ secrets.TOKEN_TELEKNEW }}
         tags: |
-          teleknew/sl-back:pr-${{ github.event.pull_request.number }}
+          teleknew/sl-back-app
           
           
           
