--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
         secrets: |
             GIT_AUTH_TOKEN=${{ secrets.TOKEN_TELEKNEW }}
         tags: |
-          teleknew/sl-back-app
+          ghcr.io/teleknew/sl-back-app
           
           
           
