--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.TOKEN_TELEKNEW }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and push container image
       uses: docker/build-push-action@v3
       with:
