--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   php:
     image: ghcr.io/teleknew/sl-back-app:latest
-    pull_policy: always
+#    pull_policy: always
     #image: sl-back:latest
     #volumes:
     #  - './:/var/www/html'
