docker-compose.yaml env added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       - './:/var/www/html'
     build:
       context: ./
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_DB=new
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_USER=admin
 
   nginx:
     image: ghcr.io/teleknew/sl-front:latest
